[package]
authors = ["Li Chen <dotneteer@gmail.com>"]
name = "many-proxies-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tls-client"
path = "src/tls_client_auth/client.rs"

[[bin]]
name = "tls-server"
path = "src/tls_client_auth/server.rs"

[[bin]]
name = "tcp-proxy"
path = "src/tcp_proxy/main.rs"

[[bin]]
name = "tls-term"
path = "src/tls_term/main.rs"

[dependencies]
futures = { version = "0.3", default-features = false, features = ["alloc"] }
rustls = { version = "0.20", default-features = false }
rustls-pemfile = "1.0"
tokio = { version = "1.0", features = [ "rt-multi-thread", "time", "fs", "macros", "net",] }
tonic = { version = "0.7", features = ["tls"] }
tokio-rustls = "0.23"
prost = "0.10"

[build-dependencies]
tonic-build = "0.7"