[package]
name = "hyper-http2-proxy"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A high-performance HTTP proxy server for gRPC traffic with TLS termination"
license = "MIT OR Apache-2.0"

[dependencies]
# HTTP/2 and networking
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"

# TLS support
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization and configuration
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# CLI argument parsing
clap = { version = "4.0", features = ["derive"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
atty = "0.2"

# Utilities
bytes = "1.0"
futures = "0.3"
pin-project = "1.0"
glob = "0.3"
fastrand = "2.0"

[dev-dependencies]
# Testing utilities
tokio-test = "0.4"
tower = { version = "0.4", features = ["util"] }
tower-test = "0.4"
tempfile = "3.0"

# Test utilities for HTTP
http = "1.0"