[package]
name = "pingora-http2-proxy"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "High-performance gRPC HTTP proxy built with Pingora"
license = "MIT OR Apache-2.0"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
humantime-serde = "1.1"

# HTTP/2 and networking
http = "1.0"
bytes = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio-stream = "0.1"
futures-util = "0.3"

# TLS support
rustls = "0.23"
rustls-pemfile = "2.0"
tokio-rustls = "0.26"
x509-parser = "0.16"

# Configuration and CLI
clap = { version = "4.0", features = ["derive"] }
config = "0.14"

# Logging and error handling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
once_cell = "1.0"
async-trait = "0.1"

# HTTP/2 server implementation (using hyper instead of Pingora due to compatibility issues)
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tower = "0.4"
tower-service = "0.3"

[dev-dependencies]
# Property-based testing
proptest = "1.0"

# Testing utilities
tokio-test = "0.4"
tempfile = "3.0"